# backup-btrfs

./: .gitignore  Cargo.toml  README.md  README.rst  _service  backup-local-rs.spec  builder.nu  flake.nix  hashes.json  hashes.toml  justfile  mod.nu
.github/workflows/: nix.yml
docs/src/: architecture.dot
src/: backup_error.rs  btrfs.rs  command.rs  configuration.rs  custom_duration.rs  custom_error.rs  lib.rs  main.rs  utils.rs
src/actions/: mod.rs  tests.rs
src/btrfs/: mod.rs  tests.rs
src/command/: mod.rs  tests.rs
src/commands/: delete_subvolume.rs  get_mount_information.rs  get_subvolume_info.rs  get_subvolumes.rs  mod.rs  read_link.rs  send_snapshot.rs  snapshot_subvolume.rs
src/objects/: mod.rs  mount_information.rs  subvolume.rs  subvolume_info.rs
src/utils/: mod.rs  snapshot.rs  tests.rs
