[package]
name = "backup-local-rs"
version = "0.1.0"
authors = ["Hannes Hochreiner <hannes@hochreiner.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
uuid = "0"
