[package]
name = "backup-btrfs"
version = "1.0.0"
authors = ["Hannes Hochreiner <hannes@hochreiner.net>"]
edition = "2018"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"
anyhow = "1"
uuid = "1.2"
log = "0"
env_logger = "0"
exec-rs = { git = "https://github.com/hannes-hochreiner/exec-rs", tag = "v1.0.0" }
policer = { git = "https://github.com/hannes-hochreiner/policer", tag = "v0.2.0" }

[dev-dependencies]
exec-rs = { git = "https://github.com/hannes-hochreiner/exec-rs", tag = "v1.0.0", features = ["mockall"] }
mockall = "0"
